--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,18 @@
     <title>Title</title>
 </head>
 <body>
+<div class="main">
+    <nav>
+        <h2 class="logo">Portfolio</h2>
+
+        <ul>
+            <li><a href="homePage">Home</a></li>
+            <li><a href="aboutMe">About</a></li>
+            <li><a href="myServices">Services</a></li>
+            <li><a href="myProjects">Projects</a></li>
+            <li><a href="contactMe">Contact</a></li>
+        </ul>
+    </nav>
 
 </body>
 </html>
