--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,20 @@
             <li><a href="contactMe">Contact</a></li>
         </ul>
     </nav>
+    <div class="content">
+        <img src="images/WhatsApp%20Image%202024-07-21%20at%2011.38.54%20AM%201.png" alt="">
+        <h2>Hello i'm</h2>
+        <h2>UDANTHA PANTHAKA</h2>
+        <h2>And I’am a Software Developer</h2>
+
+        <div class="social_media">
+            <img src="images/logo/img.png" alt="">
+            <img src="images/logo/img_1.png" alt="">
+            <img src="images/logo/img_2.png" alt="">
+            <img src="images/logo/img_3.png" alt="">
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
