--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,23 @@
     </div>
 </div>
 
+<!--ABOUT SECTION-->
+
+<div class="about">
+
+   <h2>About Me</h2>
+    <img src="images/WhatsApp%20Image%202024-07-25%20at%2010.49.29%20AM%20(1).jpeg" alt="">
+    <div>
+        <h4>
+            I am udantha panthaka,  i am a UI/UX Designer and Web Developer
+        </h4>
+        <p>
+            My name is Udantha Panthaka, and I am currently pursuing a Diploma in Software Engineering at IJSE Institute. With a strong passion for technology and innovation. My skill set extends to web development with expertise in HTML, CSS as well as database management using SQL. I have a keen interest in software development methodologies, particularly Agile, and am adept at using tools like Git for version control and Docker for containerization. Through my academic journey and personal projects, I have gained hands-on experience in building robust software solutions. I am dedicated to continuous learning and staying updated with the latest industry trends, aiming to leverage my skills to create impactful and innovative technological solutions. My strong problem-solving abilities, effective communication, and leadership skills enable me to excel both independently and as part of a team.
+        </p>
+    </div>
+
+</div>
+
+
 </body>
 </html>
