--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,26 @@
 
 </div>
 
+<!--SERVICE SECTION-->
 
+<div class="service">
+    <h2>Our Services</h2>
+    <div class="Ui-Ux Designer">
+        <div>
+            <h3>Ui-Ux Designer</h3>
+            <p>Designing layouts, color schemes, typography, and interactive elements</p>
+        </div>
+    </div>
+</div>
+
+<div class="Web Development">
+
+    <div>
+    <h3>Web Development</h3>
+        <p>
+            Building responsive and user-friendly websites. Expertise in HTML, CSS, JavaScript, and various web frameworks.
+        </p>
+    </div>
+</div>
 </body>
 </html>
