add service about database managment

--- a/src/index.html
+++ b/src/index.html
@@ -65,12 +65,18 @@
 </div>
 
 <div class="Web Development">
-
     <div>
     <h3>Web Development</h3>
         <p>
             Building responsive and user-friendly websites. Expertise in HTML, CSS, JavaScript, and various web frameworks.
         </p>
+    </div>
+</div>
+
+<div class="Database Management">
+    <div>
+        <h3>Database Management</h3>
+        <p>Design, implementation, and maintenance of relational and non-relational databases</p>
     </div>
 </div>
 </body>
