add all projects

--- a/src/index.html
+++ b/src/index.html
@@ -79,5 +79,36 @@
         <p>Design, implementation, and maintenance of relational and non-relational databases</p>
     </div>
 </div>
+
+<!--PROJECT SECTION-->
+
+<div class="project">
+<!--    PROJECT 1-->
+    <h2>Our Projects</h2>
+    <div>
+        <img src="images/learn-programming-career-jpg.webp" alt="">
+        <p>
+            Web development is the process of creating websites and web applications that run on the internet. It encompasses various aspects, from designing the visual layout to coding the functionality behind the scenes. Web development is typically divided into two main areas. frontend and backend
+        </p>
+    </div>
+</div>
+
+<!--PROJECT 2-->
+
+<div>
+    <img src="images/benefits-of-coding-e1606911064541.jpg" alt="">
+    <p>
+        Web development is the process of creating websites and web applications that run on the internet. It encompasses various aspects, from designing the visual layout to coding the functionality behind the scenes. Web development is typically divided into two main areas. frontend and backend
+    </p>
+</div>
+
+<!--PROJECT 3-->
+
+<div>
+    <img src="images/What%20Is%20the%20Difference%20Between%20Software%20Development%20vs.webp" alt="">
+    <p>
+        Web development is the process of creating websites and web applications that run on the internet. It encompasses various aspects, from designing the visual layout to coding the functionality behind the scenes. Web development is typically divided into two main areas. frontend and backend
+    </p>
+</div>
 </body>
 </html>
