--- a/src/index.html
+++ b/src/index.html
@@ -110,5 +110,35 @@
         Web development is the process of creating websites and web applications that run on the internet. It encompasses various aspects, from designing the visual layout to coding the functionality behind the scenes. Web development is typically divided into two main areas. frontend and backend
     </p>
 </div>
+
+<!--CONTACT-->
+
+
+<div>
+    <h2>Contact Us</h2>
+    <div>
+        <div>
+            <input type="text" placeholder="first Name">
+        </div>
+        <br>
+        <div>
+            <input type="text" placeholder="last Name">
+        </div>
+        <br>
+        <div>
+            <input type="text" placeholder="contact Number">
+        </div>
+        <br>
+        <div>
+            <input type="text" placeholder="email">
+        </div>
+        <br>
+        <div>
+            <input type="text" placeholder="your Massage">
+        </div>
+        <br>
+    </div>
+</div>
+
 </body>
 </html>
