add footer section

--- a/src/index.html
+++ b/src/index.html
@@ -140,5 +140,16 @@
     </div>
 </div>
 
+<!--FOOTER-->
+
+<div>
+    <div>
+        <a href="udanthapanthaka12@gmail.com">udanthapanthaka12@gmail.com</a><br>
+        <a href="0779803561">0779803561</a>
+    </div>
+    <div>
+        <p>Copyright © 2024 HubSpot, Inc.</p>
+    </div>
+</div>
 </body>
 </html>
